--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @use '../../Scss/Index';
 
 .header{
-    margin-top: 1em;
+    margin-top: 2em !important;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     height: auto;
