--- a/src/Components/Menu/Menu.module.scss
+++ b/src/Components/Menu/Menu.module.scss
@@ -40,7 +40,7 @@
 
     @include Index.responsive(desktop){
         margin-top: 0.5em;
-        justify-content: space-evenly;
+        justify-content: space-between;
         flex-direction: row;
     }
 }
